2. security-basic: Custom Security

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -1,6 +1,6 @@
 # 2. 스프링 시큐리티 기본 API & Filter 이해
 
-## 2.1. 인증 API 
+## 2.1. 인증 API
 
 ### 2.1.1. 프로젝트 구성 및 의존성 추가 
 
@@ -11,7 +11,140 @@
         2. 기본 로그인 페이지 제공한다
         3. 기본 계정 한 개 제공한다 – username : user / password : 랜덤 문자열
 
+- 개선할 사항
+    - 계정 추가
+    - 권한 추가
+    - DB 연동
+    - 기본적인 보안 기능 외에 시스템에서 필요로 하는 더 세부적이고 추가적인 보안기능이 필요
+
 ### 2.1.2. 사용자 정의 보안 기능 구현
+
+- WebSecurityConfigurerAdapter (핵심)
+    - 웹 보안 기능 초기화 및 활성화
+    - HttpSecurity 생성
+        - 인증 & 인가 API 제공
+
+![WebSecurityConfigurerAdapter](/docs/img/diagram_WebSecurityConfigurerAdapter.png "WebSecurityConfigurerAdapter")
+![HttpSecurity](/docs/img/diagram_HttpSecurity.png "HttpSecurity")
+
+```java
+@Configuration
+@EnableWebSecurity
+public class SecurityConfig extends WebSecurityConfigurerAdapter {
+    @Override
+    protected void configure(HttpSecurity http) throws Exception {
+        // 인가 정책
+        http
+                .authorizeRequests()
+                .anyRequest().authenticated();
+        // 인증 정책
+        http
+                .formLogin();
+    }
+}
+```
+- SecurityConfig Debug
+
+    1. WebSecurityConfigurerAdapter 클래스의 기본 값 설정 디버깅
+        - LogFactory.getLog(WebSecurityConfigurerAdapter.class);
+        - HeaderContentNegotiationStrategy
+        - ObjectPostProcessor<Object>
+            - SecurityConfig 클래스에 @EnableWebSecurity and @Configuration 설정이 필요하도록 알려주는 인터페이스
+        - AuthenticationConfiguration
+        - AuthenticationManagerBuilder
+        - AuthenticationManagerBuilder
+        - boolean disableLocalConfigureAuthenticationBldr
+        - boolean authenticationManagerInitialized
+        - AuthenticationManager
+        - AuthenticationTrustResolverImpl implements AuthenticationTrustResolver
+            - 인증 클래스
+                - Authentication 토큰의 인증 값을 평가하는 클래스
+                - isAnonymous or isRememberMe
+        - HttpSecurity
+        - boolean disableDefaults
+        
+    2. HttpSecurity 기본 설정
+        2.1. getHttp()
+            - AuthenticationEventPublisher or DefaultAuthenticationEventPublisher
+                - Success or Failure 시 일어나는 이벤트 등록 클래스
+            - AuthenticationManager
+            - HttpSecurity(objectPostProcessor, authenticationBuilder, sharedObjects);
+                - objectPostProcessor
+                    - SecurityConfig 클래스에 @EnableWebSecurity and @Configuration 설정이 필요하도록 알려주는 인터페이스
+                - authenticationBuilder
+                    - localConfigureAuthenticationBldr.build();
+                    - AuthenticationManager
+                - sharedObjects
+                    - localConfigureAuthenticationBldr.getSharedObjects()
+                    - UserDetailsService.class
+                    - ApplicationContext.class
+                    - ContentNegotiationStrategy.class
+                    - AuthenticationTrustResolver.class
+            - http
+                - .csrf().and() - CsrfConfigurer
+                - .addFilter(new WebAsyncManagerIntegrationFilter())
+                - .exceptionHandling().and() - ExceptionHandlingConfigurer
+                - .headers().and() - HeadersConfigurer
+                - .sessionManagement().and() - SessionManagementConfigurer
+                - .securityContext().and() - SecurityContextConfigurer
+                - .requestCache().and() - RequestCacheConfigurer
+                - .anonymous().and() - AnonymousConfigurer
+                - .servletApi().and() - ServletApiConfigurer
+                - .apply(new DefaultLoginPageConfigurer<>()).and() - DefaultLoginPageConfigurer
+                - .logout();
+                
+        2.2. configure() 추가 설정
+            - authorizeRequest()
+                - ApplicationContext()
+                    - getContext()
+                        - getSharedObject() - ApplicationContext
+                    - getOrApply() - ExpressionUrlAuthorizationConfigurer
+                        - ExpressionUrlAuthorizationConfigurer
+                            - AbstractInterceptUrlConfigurer
+                                - AbstractHttpConfigurer
+                                    - SecurityConfigurerAdapter
+                                        - CompositeObjectPostProcessor
+                                            - List<ObjectPostProcessor<?>>
+                            - AbstractConfigAttributeRequestMatcherRegistry
+                                - AbstractRequestMatcherRegistry
+                                    - AbstractInterceptUrlRegistry
+                            - ExpressionInterceptUrlRegistry
+                    - getRegistry()
+
+            - .anyRequest()
+                -  requestMatchers(ANY_REQUEST)
+                    - chainRequestMatchers()
+                        - chainRequestMatchersInternal();
+                            - AuthorizedUrl(requestMatchers)
+
+            - .authenticated()
+                - access(authenticated)
+                    - interceptUrl(requestMatchers, SecurityConfig.createList(attribute));
+                        - REGISTRY.addMapping(new AbstractConfigAttributeRequestMatcherRegistry.UrlMapping(requestMatcher, configAttributes));
+                            - this.urlMappings.add(urlMapping);
+                    - ExpressionUrlAuthorizationConfigurer.this.REGISTRY;
+                    
+            - and()
+                - ExpressionUrlAuthorizationConfigurer.this.and()
+
+            - formLogin()
+                - getOrApply() - FormLoginConfigurer
+                - getConfigurer() - FormLoginConfigurer
+                - apply() - FormLoginConfigurer
+                    - addObjectPostProcessor() - SecurityConfigurerAdapter
+                    - setBuilder() - FormLoginConfigurer
+                    - add() - FormLoginConfigurer
+
+            - and()
+                - ExpressionUrlAuthorizationConfigurer.this.and()
+
+            - httpBasic()
+                - getOrApply() - HttpBasicConfigurer
+                - getConfigurer() - HttpBasicConfigurer
+                - apply() - HttpBasicConfigurer
+                    - addObjectPostProcessor() - SecurityConfigurerAdapter
+                    - setBuilder() - HttpBasicConfigurer
+                    - add() - HttpBasicConfigurer
 
 ### 2.1.3. HTTP Basic 인증
 
