2. security-basic: Custom Security

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -27,6 +27,7 @@
 ![WebSecurityConfigurerAdapter](/docs/img/diagram_WebSecurityConfigurerAdapter.png "WebSecurityConfigurerAdapter")
 ![HttpSecurity](/docs/img/diagram_HttpSecurity.png "HttpSecurity")
 
+- [SecurityConfig.java](/security-basic-api/src/main/java/kr/seok/SecurityConfig.java)
 ```java
 @Configuration
 @EnableWebSecurity
@@ -43,28 +44,29 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     }
 }
 ```
+
 - SecurityConfig Debug
 
     1. WebSecurityConfigurerAdapter 클래스의 기본 값 설정 디버깅
-        - LogFactory.getLog(WebSecurityConfigurerAdapter.class);
-        - HeaderContentNegotiationStrategy
-        - ObjectPostProcessor<Object>
+        1) LogFactory.getLog(WebSecurityConfigurerAdapter.class);
+        2) HeaderContentNegotiationStrategy
+        3) ObjectPostProcessor<Object>
             - SecurityConfig 클래스에 @EnableWebSecurity and @Configuration 설정이 필요하도록 알려주는 인터페이스
-        - AuthenticationConfiguration
-        - AuthenticationManagerBuilder
-        - AuthenticationManagerBuilder
-        - boolean disableLocalConfigureAuthenticationBldr
-        - boolean authenticationManagerInitialized
-        - AuthenticationManager
-        - AuthenticationTrustResolverImpl implements AuthenticationTrustResolver
+        4) AuthenticationConfiguration
+        5) AuthenticationManagerBuilder
+        6) AuthenticationManagerBuilder
+        7) boolean disableLocalConfigureAuthenticationBldr
+        8) boolean authenticationManagerInitialized
+        9) AuthenticationManager
+        10) AuthenticationTrustResolverImpl implements AuthenticationTrustResolver
             - 인증 클래스
                 - Authentication 토큰의 인증 값을 평가하는 클래스
                 - isAnonymous or isRememberMe
-        - HttpSecurity
-        - boolean disableDefaults
+        11) HttpSecurity
+        12) boolean disableDefaults
         
     2. HttpSecurity 기본 설정
-        2.1. getHttp()
+        1) getHttp()
             - AuthenticationEventPublisher or DefaultAuthenticationEventPublisher
                 - Success or Failure 시 일어나는 이벤트 등록 클래스
             - AuthenticationManager
@@ -93,7 +95,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
                 - .apply(new DefaultLoginPageConfigurer<>()).and() - DefaultLoginPageConfigurer
                 - .logout();
                 
-        2.2. configure() 추가 설정
+        2) configure() 추가 설정
             - authorizeRequest()
                 - ApplicationContext()
                     - getContext()
@@ -110,13 +112,13 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
                                     - AbstractInterceptUrlRegistry
                             - ExpressionInterceptUrlRegistry
                     - getRegistry()
-
+    
             - .anyRequest()
                 -  requestMatchers(ANY_REQUEST)
                     - chainRequestMatchers()
                         - chainRequestMatchersInternal();
                             - AuthorizedUrl(requestMatchers)
-
+    
             - .authenticated()
                 - access(authenticated)
                     - interceptUrl(requestMatchers, SecurityConfig.createList(attribute));
@@ -126,7 +128,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
                     
             - and()
                 - ExpressionUrlAuthorizationConfigurer.this.and()
-
+    
             - formLogin()
                 - getOrApply() - FormLoginConfigurer
                 - getConfigurer() - FormLoginConfigurer
@@ -134,10 +136,10 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
                     - addObjectPostProcessor() - SecurityConfigurerAdapter
                     - setBuilder() - FormLoginConfigurer
                     - add() - FormLoginConfigurer
-
+    
             - and()
                 - ExpressionUrlAuthorizationConfigurer.this.and()
-
+    
             - httpBasic()
                 - getOrApply() - HttpBasicConfigurer
                 - getConfigurer() - HttpBasicConfigurer
