2. security-basic: Custom Security

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -24,7 +24,10 @@
     - HttpSecurity 생성
         - 인증 & 인가 API 제공
 
+- WebSecurityConfigurerAdapter
 ![WebSecurityConfigurerAdapter](/docs/img/diagram_WebSecurityConfigurerAdapter.png "WebSecurityConfigurerAdapter")
+
+- HttpSecurity
 ![HttpSecurity](/docs/img/diagram_HttpSecurity.png "HttpSecurity")
 
 - [SecurityConfig.java](/security-basic-api/src/main/java/kr/seok/SecurityConfig.java)
@@ -44,9 +47,9 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     }
 }
 ```
-
+- Debug
+```
 - SecurityConfig Debug
-
     1. WebSecurityConfigurerAdapter 클래스의 기본 값 설정 디버깅
         1) LogFactory.getLog(WebSecurityConfigurerAdapter.class);
         2) HeaderContentNegotiationStrategy
@@ -147,6 +150,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
                     - addObjectPostProcessor() - SecurityConfigurerAdapter
                     - setBuilder() - HttpBasicConfigurer
                     - add() - HttpBasicConfigurer
+```
 
 ### 2.1.3. HTTP Basic 인증
 
