--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -154,9 +154,98 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 
 ### 2.1.3. HTTP Basic 인증
 
+```
+- Http는 자체적인 인증 관련 기능을 제공하며 HTTP 표준에 정의된 가장 단순한 인증 기법이다.
+- 간단한 설정과 Stateless가 장점 - Session Cookie(JESSIONID) 사용하지 않음
+- 보호차원 접근 시 서버가 클라이언트에게 401 UnAuthorized 응답과 함께 WWW-Authenticate header를 기술해서 인증 요구를 보냄
+- Client Id: Password 값을 Base64로 Encoding한 문자열을 Authorization Header에 추가한 뒤 Server에게 Resource를 요청
+    - Authorization: Basic cmVzdDpyZXN0
+- ID, Password가 Base64로 Encoding되어 있어 ID, Password가 외부에 쉽게 노출되는 구조이기 때문에 SSL이나 TLS는 필수이다.
+```
+
 ### 2.1.4. BasicAuthenticationFilter
 
+[RFC 7617](https://tools.ietf.org/html/rfc7617)
+![RFC 7617 Diagram](/docs/img/diagram_BasicAuthenticationFilter.png)
+
+- 인증 프로토콜과 헤더
+```
+- HTTP는 필요에 따라 고쳐 쓸 수 있는 제어 헤더를 통해, 다른 인증 프로토콜에 맞추어 확장할 수 있는 프레임워크를 제공한다.
+- 헤더의 형식과 내용은 인증 프로토콜에 따라 달라진다.
+- 인증 프로토콜은 HTTP 인증 헤더에 기술되어 있다.
+- HTTP에는 "기본 인증"과 "DIGEST 인증"이 있다.
+```
+
+- Basic Authentication 의 문제점
+```
+- 기본 인증의 보안 문제
+    - 기본 인증은 단순하고 편리하지만 안심할 수 없다.
+    - 기본인증은 악의적이지 않은 누군가가 의도하지 않게 리소스에 접근하는 것을 막는데 사용하거나 SSL 같은 암호 기술과 혼용 해야 한다.
+    - base64 인코딩된 값은 쉽게 디코딩할 수 있다.
+    - 제 3자는 사용자 이름과 비밀번호를 캡처하여 악용할 수 있다.
+    - Proxy나 중개자가 개입하는 경우 정상적인 동작을 보장할 수 없다.
+    - 기본인증은 가짜 서버의 위장에 취약하다.
+```
 ### 2.1.5. Form 인증
+- 인증 API 확인하기
+```
+- 인증
+    - formLogin()
+    - loginPage("/loginPage")
+        - 스프링 시큐리티의 기본 로그인 페이지를 설정
+    - defaultSuccessUrl("/")
+        - 로그인 성공 시 redirect 되는 URL 설정
+    - usernameParameter("userId")
+        - 로그인 기본페이지의 username 의 name 값을 설정
+    - passwordParameter("passwd")
+        - 로그인 기본페이지의 password 의 name 값을 설정
+    - loginProcessingUrl("/login_proc")
+        - ?
+    - successHandler(new AuthenticationSuccessHandler() {})
+        - 로그인 성공 시 실행되는 Handler
+    - failureHandler(new AuthenticationFailureHandler() {})
+        - 로그인 실패 시  실행되는 Handler
+    - permitAll()
+        - formLogin에 접근하기 위한 url의 접근 권한 all 설정
+```
+    
+```java
+@Configuration
+@EnableWebSecurity
+public class SecurityConfig extends WebSecurityConfigurerAdapter {
+    @Override
+    protected void configure(HttpSecurity http) throws Exception {
+        // 인가 정책
+        http
+                .authorizeRequests()
+                .anyRequest().authenticated();
+        // 인증 정책
+        http
+                .formLogin()
+//                .loginPage("/loginPage")
+                .defaultSuccessUrl("/")
+                .failureUrl("/login")
+                .usernameParameter("userId")
+                .passwordParameter("passwd")
+                .loginProcessingUrl("/login_proc")
+                .successHandler(new AuthenticationSuccessHandler() {
+                    @Override
+                    public void onAuthenticationSuccess(HttpServletRequest request, HttpServletResponse response, Authentication authentication) throws IOException, ServletException {
+                        System.out.println("authentication : " + authentication.getName());
+                        response.sendRedirect("/");
+                    }
+                })
+                .failureHandler(new AuthenticationFailureHandler() {
+                    @Override
+                    public void onAuthenticationFailure(HttpServletRequest request, HttpServletResponse response, AuthenticationException exception) throws IOException, ServletException {
+                        System.out.println("exception" + exception.getMessage());
+                        response.sendRedirect("/login");
+                    }
+                })
+                .permitAll();
+    }
+}
+```
 
 ### 2.1.6. UserPasswordAuthenticationFilter
 
