--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -248,9 +248,133 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 ```
 
 ### 2.1.6. UserPasswordAuthenticationFilter
+```
+- FormLogin API 의 Flow 확인
+    - formLogin() 설정 시 - FormLoginConfigurer
+        1. AbstractAuthenticationFilterConfigurer 추상클래스에 UsernamePasswordAuthenticationFilter 등록
+            1.1. AbstractHttpConfigurer
+                1.1.1. SecurityConfigurerAdapter
+                    1.1.1.1. CompositeObjectPostProcessor()
+                        1.1.1.1.1. List<ObjectPostProcessor<?>>
+            1.2. SavedRequestAwareAuthenticationSuccessHandler
+                1.2.1. SimpleUrlAuthenticationSuccessHandler
+                    1.2.1.1. AbstractAuthenticationTargetUrlRequestHandler
+                        - DefaultRedirectStrategy
+                        - targetUrlParameter
+                        - defaultTargetUrl
+                        - alwaysUseDefaultTargetUrl
+                        - useReferer
+                        - DefaultRedirectStrategy
+                1.2.2. HttpSessionRequestCache
+                    - PortResolverImpl
+                    - createSessionAllowed
+                    - requestMatcher
+                    - sessionAttrName
+                1.2.3. AuthenticationSuccessHandler
+                1.2.4. setLoginPage()
+                    1.2.4.1. LoginUrlAuthenticationEntryPoint
+                        - PortMapperImpl
+                        - PortResolverImpl
+                            - PortMapperImpl
+                        - loginFormUrl
+                        - forceHttps
+                        - useForward
+                        - DefaultRedirectStrategy
+            1.3. AbstractAuthenticationProcessingFilter
 
+    - Custom - AbstractAuthenticationFilterConfigurer
+        - defaultSuccessUrl()
+            - SavedRequestAwareAuthenticationSuccessHandler
+                - setDefaultTargetUrl()
+                - setAlwaysUseDefaultTargetUrl()
+                    - AbstractAuthenticationTargetUrlRequestHandler
+                - successHandler()
+        - failureUrl()
+            - failureHandler() - SimpleUrlAuthenticationFailureHandler
+        - loginProcessingUrl()
+            - setRequiresAuthenticationRequestMatcher()
+        - successHandler()
+        - failureHandler()
+        - permitAll()
+
+    - init()
+        - getHttp()
+```
+
+- FilterChain
+```
+0 = {ApplicationFilterConfig@8919} "ApplicationFilterConfig[name=characterEncodingFilter, filterClass=org.springframework.boot.web.servlet.filter.OrderedCharacterEncodingFilter]"
+1 = {ApplicationFilterConfig@8920} "ApplicationFilterConfig[name=formContentFilter, filterClass=org.springframework.boot.web.servlet.filter.OrderedFormContentFilter]"
+2 = {ApplicationFilterConfig@8921} "ApplicationFilterConfig[name=requestContextFilter, filterClass=org.springframework.boot.web.servlet.filter.OrderedRequestContextFilter]"
+3 = {ApplicationFilterConfig@8922} "ApplicationFilterConfig[name=springSecurityFilterChain, filterClass=org.springframework.boot.web.servlet.DelegatingFilterProxyRegistrationBean$1]"
+    0 = {WebAsyncManagerIntegrationFilter@7560} 
+    1 = {SecurityContextPersistenceFilter@8886}
+        - SecurityContextRepository
+            - SecurityContextHolder.setContext()
+ 
+    2 = {HeaderWriterFilter@8900} 
+    3 = {CsrfFilter@8901} 
+    4 = {LogoutFilter@8902} 
+        - SecurityContextHolder.getContext().getAuthentication()
+        - onLogoutSuccess()
+    5 = {UsernamePasswordAuthenticationFilter@8903}
+        - AbstractAuthenticationToken
+            - setAuthenticated()
+            - setDetails()
+            - ProviderManager
+                - getProviders() -> AuthenticationProvider
+                - AnonymousAuthenticationToken
+                - UsernamePasswordAuthenticationToken
+                    - authenticate()
+                    - getName()
+                        - getPrincipal()
+                            - UserDetails or AuthenticatedPrincipal or Principal
+                            - loadUserByUsername
+                            - User
+        - eraseCredentials()
+        - successfulAuthentication()
+            - SecurityContextHolder.getContext().setAuthentication(authResult);
+
+    6 = {DefaultLoginPageGeneratingFilter@8904} 
+    7 = {DefaultLogoutPageGeneratingFilter@8905} 
+    8 = {RequestCacheAwareFilter@8906} 
+    9 = {SecurityContextHolderAwareRequestFilter@8907}
+        - ThreadLocalSecurityContextHolderStrategy 
+    10 = {AnonymousAuthenticationFilter@8908} 
+    11 = {SessionManagementFilter@8909} 
+    12 = {ExceptionTranslationFilter@8910} 
+    13 = {FilterSecurityInterceptor@8911} 
+4 = {ApplicationFilterConfig@8923} "ApplicationFilterConfig[name=Tomcat WebSocket (JSR356) Filter, filterClass=org.apache.tomcat.websocket.server.WsFilter]"
+
+```
 ### 2.1.7. Logout, LogoutFilter
+- Logout
+    - request("/logout")
+    - 세션 무효화
+    - 인증 토큰 삭제
+    - 쿠키정보 삭제,
+    - 로그인 페이지로 리다이렉트
 
+- logout API (로그아웃 처리)
+    - logoutUrl()
+        - 로그아웃처리 URL
+    - logoutSuccessUrl()
+        - 로그아웃 성공 후 이동페이지
+    - deleteCookies()
+        - 로그아웃 후 쿠키삭제
+    - addLogoutHandler()
+        - 로그아웃 핸들러
+    - logoutSuccessHandler()
+        - 로그아웃 성공 후 핸들러
+
+- 로그아웃 핸들러
+```
+0 = {SecurityConfig$4@7841} 
+1 = {CookieClearingLogoutHandler@7851} 
+2 = {CsrfLogoutHandler@7855} 
+3 = {SecurityContextLogoutHandler@7856} 
+4 = {LogoutSuccessEventPublishingLogoutHandler@7857} 
+```
 ### 2.1.8. Remember Me 인증
 
 ### 2.1.9. RememberMeAuthenticationFilter
