--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -166,7 +166,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 ### 2.1.4. BasicAuthenticationFilter
 
 [RFC 7617](https://tools.ietf.org/html/rfc7617)
-![RFC 7617 Diagram](/docs/img/diagram_BasicAuthenticationFilter.png)
+![RFC 7617 Diagram](/docs/img/flow_BasicAuthenticationFilter.png)
 
 - 인증 프로토콜과 헤더
 ```
@@ -248,6 +248,9 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 ```
 
 ### 2.1.6. UserPasswordAuthenticationFilter
+- Authentication
+![UserPasswordAuthenticationFilter](/docs/img/flow_UsernamePasswordAuthenticationFilter.png)
+
 ```
 - FormLogin API 의 Flow 확인
     - formLogin() 설정 시 - FormLoginConfigurer
@@ -348,6 +351,9 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 
 ```
 ### 2.1.7. Logout, LogoutFilter
+- LogoutFilter Flow
+![LogoutFilter](/docs/img/flow_LogoutFilter.png)
+
 - Logout
     - request("/logout")
     - 세션 무효화
@@ -375,6 +381,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 3 = {SecurityContextLogoutHandler@7856} 
 4 = {LogoutSuccessEventPublishingLogoutHandler@7857} 
 ```
+
 ### 2.1.8. Remember Me 인증
 
 ### 2.1.9. RememberMeAuthenticationFilter
