--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -31,125 +31,16 @@
 ![HttpSecurity](/docs/img/diagram_HttpSecurity.png "HttpSecurity")
 
 - [SecurityConfig.java](/security-basic-api/src/main/java/kr/seok/SecurityConfig.java)
-```java
-@Configuration
-@EnableWebSecurity
-public class SecurityConfig extends WebSecurityConfigurerAdapter {
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
-        // 인가 정책
-        http
-                .authorizeRequests()
-                .anyRequest().authenticated();
-        // 인증 정책
-        http
-                .formLogin();
-    }
-}
-```
+
 - Debug
 ```
 - SecurityConfig Debug
     1. WebSecurityConfigurerAdapter 클래스의 기본 값 설정 디버깅
-        1) LogFactory.getLog(WebSecurityConfigurerAdapter.class);
-        2) HeaderContentNegotiationStrategy
-        3) ObjectPostProcessor<Object>
-            - SecurityConfig 클래스에 @EnableWebSecurity and @Configuration 설정이 필요하도록 알려주는 인터페이스
-        4) AuthenticationConfiguration
-        5) AuthenticationManagerBuilder
-        6) AuthenticationManagerBuilder
-        7) boolean disableLocalConfigureAuthenticationBldr
-        8) boolean authenticationManagerInitialized
-        9) AuthenticationManager
-        10) AuthenticationTrustResolverImpl implements AuthenticationTrustResolver
-            - 인증 클래스
-                - Authentication 토큰의 인증 값을 평가하는 클래스
-                - isAnonymous or isRememberMe
-        11) HttpSecurity
-        12) boolean disableDefaults
-        
+
     2. HttpSecurity 기본 설정
         1) getHttp()
-            - AuthenticationEventPublisher or DefaultAuthenticationEventPublisher
-                - Success or Failure 시 일어나는 이벤트 등록 클래스
-            - AuthenticationManager
-            - HttpSecurity(objectPostProcessor, authenticationBuilder, sharedObjects);
-                - objectPostProcessor
-                    - SecurityConfig 클래스에 @EnableWebSecurity and @Configuration 설정이 필요하도록 알려주는 인터페이스
-                - authenticationBuilder
-                    - localConfigureAuthenticationBldr.build();
-                    - AuthenticationManager
-                - sharedObjects
-                    - localConfigureAuthenticationBldr.getSharedObjects()
-                    - UserDetailsService.class
-                    - ApplicationContext.class
-                    - ContentNegotiationStrategy.class
-                    - AuthenticationTrustResolver.class
-            - http
-                - .csrf().and() - CsrfConfigurer
-                - .addFilter(new WebAsyncManagerIntegrationFilter())
-                - .exceptionHandling().and() - ExceptionHandlingConfigurer
-                - .headers().and() - HeadersConfigurer
-                - .sessionManagement().and() - SessionManagementConfigurer
-                - .securityContext().and() - SecurityContextConfigurer
-                - .requestCache().and() - RequestCacheConfigurer
-                - .anonymous().and() - AnonymousConfigurer
-                - .servletApi().and() - ServletApiConfigurer
-                - .apply(new DefaultLoginPageConfigurer<>()).and() - DefaultLoginPageConfigurer
-                - .logout();
-                
-        2) configure() 추가 설정
-            - authorizeRequest()
-                - ApplicationContext()
-                    - getContext()
-                        - getSharedObject() - ApplicationContext
-                    - getOrApply() - ExpressionUrlAuthorizationConfigurer
-                        - ExpressionUrlAuthorizationConfigurer
-                            - AbstractInterceptUrlConfigurer
-                                - AbstractHttpConfigurer
-                                    - SecurityConfigurerAdapter
-                                        - CompositeObjectPostProcessor
-                                            - List<ObjectPostProcessor<?>>
-                            - AbstractConfigAttributeRequestMatcherRegistry
-                                - AbstractRequestMatcherRegistry
-                                    - AbstractInterceptUrlRegistry
-                            - ExpressionInterceptUrlRegistry
-                    - getRegistry()
-    
-            - .anyRequest()
-                -  requestMatchers(ANY_REQUEST)
-                    - chainRequestMatchers()
-                        - chainRequestMatchersInternal();
-                            - AuthorizedUrl(requestMatchers)
-    
-            - .authenticated()
-                - access(authenticated)
-                    - interceptUrl(requestMatchers, SecurityConfig.createList(attribute));
-                        - REGISTRY.addMapping(new AbstractConfigAttributeRequestMatcherRegistry.UrlMapping(requestMatcher, configAttributes));
-                            - this.urlMappings.add(urlMapping);
-                    - ExpressionUrlAuthorizationConfigurer.this.REGISTRY;
-                    
-            - and()
-                - ExpressionUrlAuthorizationConfigurer.this.and()
-    
-            - formLogin()
-                - getOrApply() - FormLoginConfigurer
-                - getConfigurer() - FormLoginConfigurer
-                - apply() - FormLoginConfigurer
-                    - addObjectPostProcessor() - SecurityConfigurerAdapter
-                    - setBuilder() - FormLoginConfigurer
-                    - add() - FormLoginConfigurer
-    
-            - and()
-                - ExpressionUrlAuthorizationConfigurer.this.and()
-    
-            - httpBasic()
-                - getOrApply() - HttpBasicConfigurer
-                - getConfigurer() - HttpBasicConfigurer
-                - apply() - HttpBasicConfigurer
-                    - addObjectPostProcessor() - SecurityConfigurerAdapter
-                    - setBuilder() - HttpBasicConfigurer
-                    - add() - HttpBasicConfigurer
+        2) configure()
+
 ```
 
 ### 2.1.3. HTTP Basic 인증
@@ -165,8 +56,8 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
 
 ### 2.1.4. BasicAuthenticationFilter
 
-[RFC 7617](https://tools.ietf.org/html/rfc7617)
-![RFC 7617 Diagram](/docs/img/flow_BasicAuthenticationFilter.png)
+- [RFC 7617](https://tools.ietf.org/html/rfc7617)
+    - ![RFC 7617 Diagram](/docs/img/flow_BasicAuthenticationFilter.png)
 
 - 인증 프로토콜과 헤더
 ```
@@ -186,8 +77,9 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     - Proxy나 중개자가 개입하는 경우 정상적인 동작을 보장할 수 없다.
     - 기본인증은 가짜 서버의 위장에 취약하다.
 ```
+
 ### 2.1.5. Form 인증
-- 인증 API 확인하기
+- 인증 API
 ```
 - 인증
     - formLogin()
@@ -208,148 +100,11 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     - permitAll()
         - formLogin에 접근하기 위한 url의 접근 권한 all 설정
 ```
-    
-```java
-@Configuration
-@EnableWebSecurity
-public class SecurityConfig extends WebSecurityConfigurerAdapter {
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
-        // 인가 정책
-        http
-                .authorizeRequests()
-                .anyRequest().authenticated();
-        // 인증 정책
-        http
-                .formLogin()
-//                .loginPage("/loginPage")
-                .defaultSuccessUrl("/")
-                .failureUrl("/login")
-                .usernameParameter("userId")
-                .passwordParameter("passwd")
-                .loginProcessingUrl("/login_proc")
-                .successHandler(new AuthenticationSuccessHandler() {
-                    @Override
-                    public void onAuthenticationSuccess(HttpServletRequest request, HttpServletResponse response, Authentication authentication) throws IOException, ServletException {
-                        System.out.println("authentication : " + authentication.getName());
-                        response.sendRedirect("/");
-                    }
-                })
-                .failureHandler(new AuthenticationFailureHandler() {
-                    @Override
-                    public void onAuthenticationFailure(HttpServletRequest request, HttpServletResponse response, AuthenticationException exception) throws IOException, ServletException {
-                        System.out.println("exception" + exception.getMessage());
-                        response.sendRedirect("/login");
-                    }
-                })
-                .permitAll();
-    }
-}
-```
 
 ### 2.1.6. UserPasswordAuthenticationFilter
 - Authentication
 ![UserPasswordAuthenticationFilter](/docs/img/flow_UsernamePasswordAuthenticationFilter.png)
 
-```
-- FormLogin API 의 Flow 확인
-    - formLogin() 설정 시 - FormLoginConfigurer
-        1. AbstractAuthenticationFilterConfigurer 추상클래스에 UsernamePasswordAuthenticationFilter 등록
-            1.1. AbstractHttpConfigurer
-                1.1.1. SecurityConfigurerAdapter
-                    1.1.1.1. CompositeObjectPostProcessor()
-                        1.1.1.1.1. List<ObjectPostProcessor<?>>
-            1.2. SavedRequestAwareAuthenticationSuccessHandler
-                1.2.1. SimpleUrlAuthenticationSuccessHandler
-                    1.2.1.1. AbstractAuthenticationTargetUrlRequestHandler
-                        - DefaultRedirectStrategy
-                        - targetUrlParameter
-                        - defaultTargetUrl
-                        - alwaysUseDefaultTargetUrl
-                        - useReferer
-                        - DefaultRedirectStrategy
-                1.2.2. HttpSessionRequestCache
-                    - PortResolverImpl
-                    - createSessionAllowed
-                    - requestMatcher
-                    - sessionAttrName
-                1.2.3. AuthenticationSuccessHandler
-                1.2.4. setLoginPage()
-                    1.2.4.1. LoginUrlAuthenticationEntryPoint
-                        - PortMapperImpl
-                        - PortResolverImpl
-                            - PortMapperImpl
-                        - loginFormUrl
-                        - forceHttps
-                        - useForward
-                        - DefaultRedirectStrategy
-            1.3. AbstractAuthenticationProcessingFilter
-
-    - Custom - AbstractAuthenticationFilterConfigurer
-        - defaultSuccessUrl()
-            - SavedRequestAwareAuthenticationSuccessHandler
-                - setDefaultTargetUrl()
-                - setAlwaysUseDefaultTargetUrl()
-                    - AbstractAuthenticationTargetUrlRequestHandler
-                - successHandler()
-        - failureUrl()
-            - failureHandler() - SimpleUrlAuthenticationFailureHandler
-        - loginProcessingUrl()
-            - setRequiresAuthenticationRequestMatcher()
-        - successHandler()
-        - failureHandler()
-        - permitAll()
-
-    - init()
-        - getHttp()
-```
-
-- FilterChain
-```
-0 = {ApplicationFilterConfig@8919} "ApplicationFilterConfig[name=characterEncodingFilter, filterClass=org.springframework.boot.web.servlet.filter.OrderedCharacterEncodingFilter]"
-1 = {ApplicationFilterConfig@8920} "ApplicationFilterConfig[name=formContentFilter, filterClass=org.springframework.boot.web.servlet.filter.OrderedFormContentFilter]"
-2 = {ApplicationFilterConfig@8921} "ApplicationFilterConfig[name=requestContextFilter, filterClass=org.springframework.boot.web.servlet.filter.OrderedRequestContextFilter]"
-3 = {ApplicationFilterConfig@8922} "ApplicationFilterConfig[name=springSecurityFilterChain, filterClass=org.springframework.boot.web.servlet.DelegatingFilterProxyRegistrationBean$1]"
-    0 = {WebAsyncManagerIntegrationFilter@7560} 
-    1 = {SecurityContextPersistenceFilter@8886}
-        - SecurityContextRepository
-            - SecurityContextHolder.setContext()
- 
-    2 = {HeaderWriterFilter@8900} 
-    3 = {CsrfFilter@8901} 
-    4 = {LogoutFilter@8902} 
-        - SecurityContextHolder.getContext().getAuthentication()
-        - onLogoutSuccess()
-    5 = {UsernamePasswordAuthenticationFilter@8903}
-        - AbstractAuthenticationToken
-            - setAuthenticated()
-            - setDetails()
-            - ProviderManager
-                - getProviders() -> AuthenticationProvider
-                - AnonymousAuthenticationToken
-                - UsernamePasswordAuthenticationToken
-                    - authenticate()
-                    - getName()
-                        - getPrincipal()
-                            - UserDetails or AuthenticatedPrincipal or Principal
-                            - loadUserByUsername
-                            - User
-        - eraseCredentials()
-        - successfulAuthentication()
-            - SecurityContextHolder.getContext().setAuthentication(authResult);
-
-    6 = {DefaultLoginPageGeneratingFilter@8904} 
-    7 = {DefaultLogoutPageGeneratingFilter@8905} 
-    8 = {RequestCacheAwareFilter@8906} 
-    9 = {SecurityContextHolderAwareRequestFilter@8907}
-        - ThreadLocalSecurityContextHolderStrategy 
-    10 = {AnonymousAuthenticationFilter@8908} 
-    11 = {SessionManagementFilter@8909} 
-    12 = {ExceptionTranslationFilter@8910} 
-    13 = {FilterSecurityInterceptor@8911} 
-4 = {ApplicationFilterConfig@8923} "ApplicationFilterConfig[name=Tomcat WebSocket (JSR356) Filter, filterClass=org.apache.tomcat.websocket.server.WsFilter]"
-
-```
 ### 2.1.7. Logout, LogoutFilter
 - LogoutFilter Flow
 ![LogoutFilter](/docs/img/flow_LogoutFilter.png)
@@ -361,30 +116,37 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     - 쿠키정보 삭제,
     - 로그인 페이지로 리다이렉트
 
-- logout API (로그아웃 처리)
-    - logoutUrl()
-        - 로그아웃처리 URL
-    - logoutSuccessUrl()
-        - 로그아웃 성공 후 이동페이지
-    - deleteCookies()
-        - 로그아웃 후 쿠키삭제
-    - addLogoutHandler()
-        - 로그아웃 핸들러
-    - logoutSuccessHandler()
-        - 로그아웃 성공 후 핸들러
-
-- 로그아웃 핸들러
-```
-0 = {SecurityConfig$4@7841} 
-1 = {CookieClearingLogoutHandler@7851} 
-2 = {CsrfLogoutHandler@7855} 
-3 = {SecurityContextLogoutHandler@7856} 
-4 = {LogoutSuccessEventPublishingLogoutHandler@7857} 
-```
-
 ### 2.1.8. Remember Me 인증
 
+- RememberMe 인증이란 ?
+- form 인증 방식에 추가되는 기능
+    - 세션이 만료되고 웹 브라우저가 종료된 이후에도 어플리케이션이 사용자를 기억하는 기능
+
+- remember-me 쿠키
+    - remember-me 기능을 활성화시킨 상태에서 인증 프로세스를 처리 시 서버는 remember-me 쿠키를 응답 헤더에 실어서 보내게 된다.
+    - 사용자는 remember-me 쿠키의 만료일 전까지 세션 유지가 가능하다.
+        - 세션이 유실되는 경우에도 remember-me 쿠키가 존재하는 경우 쿠키 안에 사용자 정보를 통해 토큰 기반 인증하여 토큰 검증 시 로그인 유지가 가능
+
+- 라이프 사이클
+    - 인증 성공
+        - remember-me 쿠키 설정
+    - 인증 실패
+        - 쿠키 존재 시 쿠키 무효화
+    - 로그 아웃
+        - 쿠키 존재 시 쿠키 무효화
+
+- 로그인 시 세션 생성 플로우
+
+- JSESSIONID 삭제 시 remember-me 쿠키가 인증 토큰을 재발급 하는 플로우
+![RememberMe 생성 확인](/docs/img/browser/rememberMe.png)
+
 ### 2.1.9. RememberMeAuthenticationFilter
+
+- remember-me 발급 플로우
+    - 
+
+- Remember-Me가 존재하는 경우 JSESSIONID가 유실되는 경우에도 인증처리가 가능
+    - SpringSecurity의 RememberMeAuthenticationFilter 에서 request Header에 Cookie를 확인하여 userId와 userPw값으로 user 객체를 얻어 인증처리 해버림
 
 ### 2.1.10. AnonymousAuthenticationFilter
 
