UsernamePasswordAuthentication flow 다시 정리

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -25,10 +25,10 @@
         - 인증 & 인가 API 제공
 
 - WebSecurityConfigurerAdapter
-![WebSecurityConfigurerAdapter](/docs/img/diagram_WebSecurityConfigurerAdapter.png "WebSecurityConfigurerAdapter")
+![WebSecurityConfigurerAdapter](/docs/img/diagram/diagram_WebSecurityConfigurerAdapter.png "WebSecurityConfigurerAdapter")
 
 - HttpSecurity
-![HttpSecurity](/docs/img/diagram_HttpSecurity.png "HttpSecurity")
+![HttpSecurity](/docs/img/diagram/diagram_HttpSecurity.png "HttpSecurity")
 
 - [SecurityConfig.java](/security-basic-api/src/main/java/kr/seok/SecurityConfig.java)
 
@@ -57,7 +57,7 @@
 ### 2.1.4. BasicAuthenticationFilter
 
 - [RFC 7617](https://tools.ietf.org/html/rfc7617)
-    - ![RFC 7617 Diagram](/docs/img/flow_BasicAuthenticationFilter.png)
+    - ![RFC 7617 Diagram](/docs/img/flow/flow_BasicAuthenticationFilter.png)
 
 - 인증 프로토콜과 헤더
 ```
@@ -80,6 +80,9 @@
 
 ### 2.1.5. Form 인증
 - 인증 API
+    - formLogin() 사용 시 FormLoginConfigurer 설정 등록
+    - FormLoginConfigurer 설정 시 UserPasswordAuthenticationFilter 등록
+
 ```
 - 인증
     - formLogin()
@@ -103,11 +106,11 @@
 
 ### 2.1.6. UserPasswordAuthenticationFilter
 - Authentication
-![UserPasswordAuthenticationFilter](/docs/img/flow_UsernamePasswordAuthenticationFilter.png)
+![UsernamePasswordAuthenticationFilter](/docs/img/flow/flow_UsernamePasswordAuthenticationFilter.png)
 
 ### 2.1.7. Logout, LogoutFilter
 - LogoutFilter Flow
-![LogoutFilter](/docs/img/flow_LogoutFilter.png)
+![LogoutFilter](/docs/img/flow/flow_LogoutFilter.png)
 
 - Logout
     - request("/logout")
@@ -118,14 +121,18 @@
 
 ### 2.1.8. Remember Me 인증
 
-- RememberMe 인증이란 ?
-- form 인증 방식에 추가되는 기능
-    - 세션이 만료되고 웹 브라우저가 종료된 이후에도 어플리케이션이 사용자를 기억하는 기능
+- RememberMe 인증이란 대체 뭐야 ?
+    - form 인증 방식에 추가로 사용할 수 있는 기능
+        - 세션이 유실 또는 웹 브라우저가 종료된 이후에도 어플리케이션이 사용자를 기억하는 기능
 
-- remember-me 쿠키
-    - remember-me 기능을 활성화시킨 상태에서 인증 프로세스를 처리 시 서버는 remember-me 쿠키를 응답 헤더에 실어서 보내게 된다.
-    - 사용자는 remember-me 쿠키의 만료일 전까지 세션 유지가 가능하다.
+- remember-me cookie 란?
+    - 발급 조건
+        - remember-me 기능을 활성화시킨 상태에서 인증 프로세스를 처리 시 서버가 remember-me 쿠키를 응답 헤더에 실어서 보내게 된다.
+    - 용도
+        - 사용자는 remember-me 쿠키의 만료일 전까지 세션 유지가 가능하다.
         - 세션이 유실되는 경우에도 remember-me 쿠키가 존재하는 경우 쿠키 안에 사용자 정보를 통해 토큰 기반 인증하여 토큰 검증 시 로그인 유지가 가능
+    - 쿠키에 존재하는 remember-me 형태
+        - ![RememberMe 생성 확인](/docs/img/browser/rememberMe.png)
 
 - 라이프 사이클
     - 인증 성공
@@ -136,9 +143,10 @@
         - 쿠키 존재 시 쿠키 무효화
 
 - 로그인 시 세션 생성 플로우
+    - 
 
 - JSESSIONID 삭제 시 remember-me 쿠키가 인증 토큰을 재발급 하는 플로우
-![RememberMe 생성 확인](/docs/img/browser/rememberMe.png)
+
 
 ### 2.1.9. RememberMeAuthenticationFilter
 
