[2.1.9 RememberMeFilter] flow 정리

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -143,15 +143,13 @@
         - 쿠키 존재 시 쿠키 무효화
 
 - 로그인 시 세션 생성 플로우
-    - 
-
 - JSESSIONID 삭제 시 remember-me 쿠키가 인증 토큰을 재발급 하는 플로우
-
+![RememberMe Flow](/docs/img/flow/flow_RememberMe.png)
 
 ### 2.1.9. RememberMeAuthenticationFilter
 
 - remember-me 발급 플로우
-    - 
+![RememberMeFilter Flow](/docs/img/flow/flow_RememberMeFilter.png)
 
 - Remember-Me가 존재하는 경우 JSESSIONID가 유실되는 경우에도 인증처리가 가능
     - SpringSecurity의 RememberMeAuthenticationFilter 에서 request Header에 Cookie를 확인하여 userId와 userPw값으로 user 객체를 얻어 인증처리 해버림
