[2.1.10 AnonymousFilter] flow 정리

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -106,10 +106,13 @@
 
 ### 2.1.6. UserPasswordAuthenticationFilter
 - Authentication
+    - 인증을 처리하는 필터
+
 ![UsernamePasswordAuthenticationFilter](/docs/img/flow/flow_UsernamePasswordAuthenticationFilter.png)
 
 ### 2.1.7. Logout, LogoutFilter
 - LogoutFilter Flow
+
 ![LogoutFilter](/docs/img/flow/flow_LogoutFilter.png)
 
 - Logout
@@ -132,7 +135,8 @@
         - 사용자는 remember-me 쿠키의 만료일 전까지 세션 유지가 가능하다.
         - 세션이 유실되는 경우에도 remember-me 쿠키가 존재하는 경우 쿠키 안에 사용자 정보를 통해 토큰 기반 인증하여 토큰 검증 시 로그인 유지가 가능
     - 쿠키에 존재하는 remember-me 형태
-        - ![RememberMe 생성 확인](/docs/img/browser/rememberMe.png)
+    
+![RememberMe 생성 확인](/docs/img/browser/rememberMe.png)
 
 - 라이프 사이클
     - 인증 성공
@@ -144,23 +148,46 @@
 
 - 로그인 시 세션 생성 플로우
 - JSESSIONID 삭제 시 remember-me 쿠키가 인증 토큰을 재발급 하는 플로우
+
 ![RememberMe Flow](/docs/img/flow/flow_RememberMe.png)
 
 ### 2.1.9. RememberMeAuthenticationFilter
 
 - remember-me 발급 플로우
+
 ![RememberMeFilter Flow](/docs/img/flow/flow_RememberMeFilter.png)
 
 - Remember-Me가 존재하는 경우 JSESSIONID가 유실되는 경우에도 인증처리가 가능
     - SpringSecurity의 RememberMeAuthenticationFilter 에서 request Header에 Cookie를 확인하여 userId와 userPw값으로 user 객체를 얻어 인증처리 해버림
 
 ### 2.1.10. AnonymousAuthenticationFilter
+- 사용자의 인증 여부를 판단하는 필터
+- 인증 받지 않은 사용자에게 Authentication == null 이 아닌 '익명 사용자용 인증객체' 를 담도록 하는 필터
+- 접근한 유저 정보의 인증정보를 null 이 아닌 익명 사용자로 확인 가능
+    - isAnonymous() 인 경우 loginPage로 접근할 수 있도록 유도 가능
+    - isAuthenticated() 인 경우 logoutPage로 접근 할 수 있도록 유도 가능
 
-### 2.1.11. 동시 세션 제어
+- AnonymousAuthenticationFilter 에서 인증객체 확인 및 익명 객체 설정 기능
+- 위 처리를 하게 되는 경우 AbstractSecurityInterceptor 에서 익명객체를 확인하여 인가 처리를 하게 됨
+
+- 익명 객체 flow
+
+![AnonymousFilter](/docs/img/flow/flow_AnonymousFilter.png)
+
+### 2.1.11. 동시적 세션 제어
+- 동일 계정으로 접속이 허용되는 최대 세션 수를 제한
+    - 이전 세션 종료 방식
+    - 이후 세션 접근 거부 방식 
 
 ### 2.1.12. 세션 고정 보호
+- 인증 할 때마다 세션 쿠키를 새로 발급하여 공격자의 쿠키 조작을 방지 
 
 ### 2.1.13. 세션 정책
+- 세션 정책
+    - Always
+    - if_Required
+    - Never
+    - Stateless
 
 ### 2.1.14. SessionManagementFilter
 
