--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -174,13 +174,44 @@
 
 ![AnonymousFilter](/docs/img/flow/flow_AnonymousFilter.png)
 
-### 2.1.11. 동시적 세션 제어
+### 2.1.11. 동시적 세션 제어 전략
 - 동일 계정으로 접속이 허용되는 최대 세션 수를 제한
     - 이전 세션 종료 방식
-    - 이후 세션 접근 거부 방식 
+    - 이후 세션 접근 거부 방식
+
+```
+/* 세션 관리 */
+.sessionManagement()
+    .maximumSessions(1) // 최대 허용 가능 세션 수 (-1: 무제한)
+    .maxSessionsPreventsLogin(true) // 동시 로그인 차단 (default: false)
+    .expiredUrl("/login") // 세션 만료 시 페이지 이동
+/* 세션 관리 */
+.sessionManagement()
+    .invalidSessionUrl("/login") // 세션 유효하지 않는 경우 페이지 이동
+```    
 
 ### 2.1.12. 세션 고정 보호
 - 인증 할 때마다 세션 쿠키를 새로 발급하여 공격자의 쿠키 조작을 방지 
+- 사용자의 쿠키를 공격자의 쿠키로 인증처리 한 뒤 공격자가 해당 쿠키로 인증하는 세션 고정 공격을 방지 하기 위한 설정
+
+```
+/* 세션 고정 보호 설정 */
+.sessionFixation()
+
+    /* 세센 고정 보호를 사용하지 않는 경우 위와 같은 문제가 발생할 수 있음 */
+     .none()
+
+    /* Servlet 3.1 미만 버전 일 때 default 값 */
+    /* 세션을 생성하되 기존 세션 정보가 있다면 사용할 수 있음 */
+     .migrateSession()
+    
+    /* 새로운 인증 세션으로 변경하는 방법 */
+     .newSession()
+
+    /* Servlet 3.1 이상 버전 일 때 default 값 */
+    /* 세션을 생성하되 기존 세션 정보가 있다면 사용할 수 있음 */
+    .changeSessionId()
+```
 
 ### 2.1.13. 세션 정책
 - 세션 정책
@@ -190,8 +221,24 @@
     - Stateless
 
 ### 2.1.14. SessionManagementFilter
+1. 세션 관리
+    - 인증 시 사용자의 세션 정보를 등록, 조회, 삭제 등의 세션 이력을 관리
+
+2. 동시적 세션 제어
+    - 동일 계정으로 접속이 허용되는 최대 세션 수를 제한
+
+3. 세션 고정 보호
+    - 인증 할 때마다 세션 쿠키를 새로 발급하여 공격자의 쿠키 조작을 방지
+ 
+4. 세션 생성 정책
+    - Always, if_Required, Never, Stateless
 
 ### 2.1.15. ConcurrentSessionFilter
+- 매 요청마다 현재 사용자의 세션 만료 여부 체크
+- 세션이 만료되었을 경우 즉시 만료 처리
+- session.isExpired() == true
+    - 로그아웃 처리
+    - 즉시 오류 페이지 응답
 
 ### 2.1.16. 권한 설정
 
