[2.1.14 ~ 15 SessionManagementFilter, ConcurrentSessionFilter] flow 정리 중

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -226,10 +226,12 @@
 
 2. 동시적 세션 제어
     - 동일 계정으로 접속이 허용되는 최대 세션 수를 제한
-
+    - ConcurrentSessionControlAuthenticationStrategy
+    
 3. 세션 고정 보호
     - 인증 할 때마다 세션 쿠키를 새로 발급하여 공격자의 쿠키 조작을 방지
- 
+    - ChangeSessionIdAuthenticationStrategy
+     
 4. 세션 생성 정책
     - Always, if_Required, Never, Stateless
 
@@ -240,6 +242,15 @@
     - 로그아웃 처리
     - 즉시 오류 페이지 응답
 
+- check point
+    - 동시적 세션 제어를 처리하기위해 ConcurrentSessionFilter와 SessionManagementFilter의 처리과정을 살펴볼 것
+
+- 시나리오
+    1. Session의 등록
+    2. 동일 계정 접속 시 세션 처리 방식
+        - 인증 실패 전략
+        - 세션 만료 전략
+        
 ### 2.1.16. 권한 설정
 
 ### 2.1.17 표현식
